--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,11 @@
   display: flex;
   justify-content: space-between;
 }
+@media only screen and (max-width: 800px) {
+  .header__right {
+    width: 320px;
+  }
+}
 .header__right__work {
   display: flex;
   align-items: center;
@@ -371,6 +376,7 @@
   .heading__navbar {
     margin-top: 10px;
     margin-bottom: 10px;
+    width: 250px;
   }
 }
 .heading__navbar ul li {
@@ -378,7 +384,6 @@
   font-family: "Nexa";
   font-weight: bold;
   font-size: 18px;
-  margin-right: 30px;
   color: #6f6f6e;
 }
 @media only screen and (max-width: 1400px) {
@@ -393,7 +398,7 @@
 }
 @media only screen and (max-width: 800px) {
   .heading__navbar ul li {
-    margin-right: 36px;
+    margin-right: 10px;
     font-size: 8px;
   }
 }
@@ -402,6 +407,7 @@
 }
 .heading__navbar ul li:hover {
   color: #262626;
+  cursor: pointer;
 }
 .heading__content {
   background-image: url(~\../../../assets/images/heading_bck.png);
@@ -445,6 +451,7 @@
     padding-top: 40px;
     padding-bottom: 40px;
     width: 200px;
+    height: 150px;
   }
 }
 .heading__content__text h2 {
